# embedded_wayland_server

./: .gitignore  Cargo.toml  README.md
src/: definitions.rs  destruction_filter.rs  instantiation_filter.rs  lib.rs  tests.rs
