[package]
name = "embedded_wayland_server"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-server = "*"
wayland-protocols = {version="*",features=["server"]}
slab = "*"

[dev-dependencies]
nix = "*"
libc = "*"
signal-hook = "*"

[features]
default = ["shm"]
shm = []
xdg_shell = []

