[package]
name = "embedded_wayland_server"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wayland-server = "*"
#wayland-protocols = {version="*",features=["server"]}
smithay = {git="https://github.com/Smithay/smithay", branch="master", features=["wayland_frontend"], default-features=false}
wayland-cursor = "*"
slab = "*"
log = "*"
env_logger = "*"

[dev-dependencies]
nix = "*"
libc = "*"
signal-hook = "*"

[features]
default = ["subcompositor","xdg_shell","dma_buf","explicit_synchronization","dnd","shm"]#
subcompositor = []
shm = []
xdg_shell = []
dma_buf = []
dnd = []
explicit_synchronization = []

#[patch."https://github.com/Smithay/smithay"]
#smithay = { path = "../smithay"}
